<resources>
    <string name="app_name">TaskApp</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_task">Task</string>
    <string name="title_newsevents">News &amp; Events</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

        <string name="createdon">CREATED ON</string>
        <string name="created_by">CREATED BY</string>
        <string name="notes">NOTES</string>
        <string name="Add_Reminder">Add Reminder</string>
        <string name="Add_People">Add People</string>
        <string name="Add_Work">Add Work</string>
        <string name="Ticket">Ticket</string>
        <string name="Attachment">Attachment</string>
        <string name="OneTime">OneTime</string>
        <string name="Repeat">Repeat</string>
        <string name="RepeatEvery">Repeat Every</string>
        <string name="StartsOn">Starts on</string>
        <string name="Dayofweek">Day of week</string>
        <string name="Date">Date</string>
        <string name="Time">Time</string>
        <string name="Daily">Daily</string>
        <string name="Monthly">Monthly</string>
        <string name="Weekly">Weekly</string>
        <string name="yearly">yearly</string>
        <string name="Monday">M</string>
        <string name="Tuesday">T</string>
        <string name="Wednesday">W</string>
        <string name="Thursday">T</string>
        <string name="Friday">F</string>
        <string name="Saturday">S</string>
        <string name="Sunday">S</string>
        <string name="Tap_to_add_notes">Tap to add notes</string>

</resources>
